RESOLVED FIXED269875
Adds Quirk so that booking.com sends simple JPEG to WebKit on iOS
https://bugs.webkit.org/show_bug.cgi?id=269875
Summary Adds Quirk so that booking.com sends simple JPEG to WebKit on iOS
Karl Dubost
Reported 2024-02-21 15:28:18 PST
Steps to reproduce: 1. On iPhone with Safari 2. Go to https://www.booking.com/hotel/us/milpitas-40-ranch-drive.html Expected: See the images Actual: Images are not visible. Why This is happening: Because JPEG 2000 has been removed from WebKit. (Bug 178758) Booking.com for Safari on iOS sends JPEG2000 versions of images in the raw HTTP responses for each HTML requests. This is currently not detectable on released versions of Safari of iOS. Outreach effort has been started. See https://github.com/webcompat/web-bugs/issues/133697 FIX: Proposal for the Quirk to fix it. * On iOS *only* * On booking.com *only* * Sends the following `Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,*/*;q=0.8` for HTML HTTP requests. * No need to modify the Accept HTTP request headers for images requests.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-21 15:28:29 PST
Karl Dubost
Comment 2 2024-02-21 19:50:38 PST
EWS
Comment 3 2024-02-22 20:13:55 PST
Committed 275216@main (7c18c3da4148): <https://commits.webkit.org/275216@main> Reviewed commits have been landed. Closing PR #24923 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.